2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/cid.c: Avoid casts (const char *) -> (char *).

2013-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid various gcc-4.6 warnings.
	* src/cidtype2.c, src/dvipdfmx.c, src/fontmap.c, src/otl_conf.c,
	src/pdfencoding.c, src/spc_pdfm.c, src/tt_cmap.c: Do not use
	unsafe casts (char **) -> (const char **).
	* src/bmpimage.c, src/cidtype0.c, src/cidtype2.c, src/dvi.c,
	src/jpegimage.c, src/pdffont.c, src/pkfont.c, src/spc_pdfm.c,
	src/tt_aux.c, src/tt_cmap.c, src/tt_glyf.c, src/tt_post.c,
	src/type1.c: Drop set but unused variables.
	src/pdfdraw.c: Do not test '(&v) != NULL', this is always true.

2012-12-12  Khaled Hosny  <khaledhosny@eglug.org>

	* src/tt_cmap.c: Make sure CMapName of embedded CMaps does not contain
	slashes.

2012-09-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac (removed): We now maintain dvipdfmx here.
	* configure.ac: Adapted.

2012-09-21  Karl Berry  <karl@tug.org>

	* many files: remove useless $Header$ from old repo,
	do not point to dvipdfmx@ email address any more.

2012-09-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ChangeLog.PATCHES, ChangeLog.TL (removed): Now merged ...
	* ChangeLog: ... into this.

2012-08-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reduce TL/W32TeX diffs.
	* src/cidtype0.c, src/cidtype2.c, src/cmap_write.c, src/mpost.c,
	src/truetype.c, src/tt_cmap.c, src/tt_gsub.c, src/tt_post.c:
	Cast function args to avoid WIN32 (MSVC) warnings.
	* src/pdfobj.c (pdf_out_xchar): Reformulate to avoid MSVC warnings.
	* src/xbb.c (show_usage): Correctly report .bb or .xbb as default.
	Always use binary mode for output file.

2012-08-26  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* src/tt_table.c (tt_read_hhea_table),
	src/tt_post.c (read_v2_post_names),
	src/cc_tmap.c (otf_load_Unicode_CMap): typos.

2012-08-23  Khaled Hosny  <khaledhosny@eglug.org>

	* src/Makefile.am: Remove mention of non-existent files.

2012-08-21  Akira Kakuto <kakuto@fuk.kindai.ac.jp>
